# The-File-Store

./: .gitignore  README.md  pyproject.toml  requirements.txt
client/: client.py  file1.txt  file2.txt
server/: app.py
src/client/: client.py
